# ProgettoLabDiProgrammazione

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  ConcreteObserver.cpp  ConcreteObserver.h  Folder.cpp  Folder.h  Note.cpp  Note.h  Observer.h  Subject.h
tst/: CMakeLists.txt  FolderTest.cpp  NoteTest.cpp
